# bazel-k8s-envoy

./: .bazelrc  BUILD  LICENSE  MODULE.bazel  README.md  Tiltfile  WORKSPACE  WORKSPACE.bzlmod  bazel.Tiltfile  go.mod  go.sum  go_deps.bzl  go_deps_patched.bzl  helpers.bzl  platforms.bzl  stamp.bzl  staticheck.bzl
.github/workflows/: build.yml  ci.bazelrc  release.yml
authz/: BUILD  main.go  values.yaml
authz/server/: BUILD  server.go
envoy/: BUILD  command.yaml  envoy.yaml  ports.yaml  values.yaml
k8s/: BUILD  api-deployment.yaml  defaults.yaml  namespace.yaml  values.yaml
k8s/base/: BUILD  service.yaml
k8s/envoy/: BUILD  config-map.yaml  deployment.yaml
runtime/: BUILD  main.go
service-one/: BUILD  main.go  values.yaml
service-one/pb/: BUILD  service-one.proto
service-one/server/: BUILD  bye.go  hello.go
tools/: BUILD  tools.go  wrapper.sh
tools/patches/envoy/: com_github_envoyproxy_protoc_gen_validate_validate_BUILD.patch
utils/: tar.bzl
